# FaceLivenessMinivisionSW

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  face_access_control.py  liveness_detection.py  liveness_detection_v3.py  liveness_turnstile_green_red.py  liveness_turnstile_green_red_fixed.py  liveness_v3.py  liveness_v5_all_in_one_fixed.py  liveness_v7_clear_ui.py  pyproject.toml  req.txt  requirements-lock.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py
app/cli/: access_preview.py  test_image.py  train.py  turnstile_kiosk.py  webcam_demo.py
app/core/: __init__.py  decision_engine.py  detection_policy.py  enums.py  models.py  pipeline.py  schemas.py  session_manager.py
app/domain/: entities.py  enums.py  exceptions.py
app/infrastructure/: assets.py  config.py  container.py  logging_setup.py
app/ml/: utils.py
app/models/: base_model.py  deeppixbis.py  mini_fas.py
app/ports/: face_detector.py  image_preprocessor.py  liveness_analyzer.py  model_repository.py
app/services/: __init__.py  active_liveness_service.py  anti_spoof_service.py  camera_service.py  event_logger.py  face_cropper.py  face_detector.py  face_tracker.py  landmark_liveness_service.py  overlay_service.py  presentation_attack_service.py  quality_service.py  recognition_gateway.py  yolo_detector.py
app/turnstile/: __init__.py  engine.py
config/: default.yaml  logging.yaml
face_liveness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  anti_spoof_predict.py  skills.md
tests/: conftest.py  test_config.py  test_decision_engine.py  test_pipeline_landmarks.py  test_pipeline_temporal.py  test_preprocess.py  test_presentation_attack_service.py  test_quality_service.py
weights/: README.md
(+76 files in other folders)
