[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hard-face-antispoof"
version = "0.1.0"
description = "Strict MiniFAS plus DeepPixBiS face anti-spoofing runtime"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.10",
    "onnxruntime>=1.18",
    "torch>=2.1",
    "torchvision>=0.16",
    "mediapipe>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hard-face-antispoof = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
